force-app/main/default/objects/TestReading__c/TestReading__c.object-meta.xml
<CustomObject>
    <label>TestReading</label>
    <nameField>
        <label>TestReading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestReadings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>