force-app/main/default/objects/TestReading__c/fields/C_Dilution_Factor__c.field-meta.xml
<CustomField>
    <fullName>C_Dilution_Factor__c</fullName>
    <label>4C-Dilution Factor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>