force-app/main/default/objects/TestReading__c/fields/NT4C_Dilution_Factor__c.field-meta.xml
<CustomField>
    <fullName>NT4C_Dilution_Factor__c</fullName>
    <label>NT4C - Dilution Factor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>